Adds v1 of SOAP API