@@ -26,15 +26,15 @@ public class RecordRepositoryAdapter implements AddRecord, GetRecords, RemoveRec
     private RecordRepository repo;
 
     @Override
-    public void appendRecord(Record record) {
-        repo.appendRecord(RecordConverter.convertRecordToRecordEntity(record));
+    public Record appendRecord(Record record) {
+        return RecordConverter.convertRecordEntityToRecord(repo.appendRecord(RecordConverter.convertRecordToRecordEntity(record)));
     }
 
     @Override
     public List<Record> getAllRecords() {
         return repo.getAllRecords().stream()
                 .map(RecordConverter::convertRecordEntityToRecord)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -47,9 +47,9 @@ public class RecordRepositoryAdapter implements AddRecord, GetRecords, RemoveRec
     }
 
     @Override
-    public void removeRecord(String recordID) throws RentalException, NotFoundException {
+    public Record removeRecord(String recordID) throws RentalException, NotFoundException {
         try {
-            repo.removeRecord(recordID);
+            return RecordConverter.convertRecordEntityToRecord(repo.removeRecord(recordID));
         } catch (com.edu.tks.repo.exception.RentalException e) {
             throw new RentalException(e.getMessage());
         } catch (com.edu.tks.repo.exception.NotFoundException e) {
